🐛 Fix margin collapse

--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -8,5 +8,5 @@
 
 .todo-list{
     position: static;
-    margin:15px;
+    padding:15px;
 }
